--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,7 @@ pip-selfcheck.json
 
 # Workspace files are user-specific
 *.sublime-workspace
+.vscode/
 
 # Project files should be checked into the repository, unless a significant
 # proportion of contributors will probably not be using Sublime Text
