--- a/nose.cfg
+++ b/nose.cfg
@@ -6,7 +6,7 @@ xunit-file=test-results/results.xml
 with-coverage=1
 cover-erase=1
 cover-inclusive=1
-cover-package=codb
+cover-package=datacoco_db
 cover-html=1
 cover-html-dir=.tox/coverage
 cover-xml=1
